kubernetes/argo-cd/projects/aws/production-hm/prefect-server/environments/production/kubernetes-manifests/hm-prefect-server-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-prefect-server-ingress
  namespace: production-hm-prefect-server
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: prefect.hongbomiao.com
  labels:
    app.kubernetes.io/name: prefect-server
    app.kubernetes.io/part-of: production-hm-prefect-server
spec:
  rules:
    - host: prefect.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
  tls:
    - hosts:
        - prefect.hongbomiao.com
      secretName: hm-prefect-server-certificate
